# my-ai-actuary

./: .env.example  .gitignore  CLAUDE.md  README.md  package.json  playwright.config.ts  pnpm-lock.yaml
.automaker/: app_spec.txt  (+1 more)
backend/: .env.example  alembic.ini  pyproject.toml  requirements.txt  verify_schema.py
backend/agent_definitions/: __init__.py  base.py  config.py
backend/api/: __init__.py  main.py
backend/api/routes/: __init__.py  agents.py  audit_trail.py  backup.py  cli_tasks.py  conversations.py  health.py  knowledge_base.py  metrics.py  orchestration.py  tracing.py  workflows.py
backend/api/v1/: __init__.py
backend/core/: __init__.py  auth.py  config.py  container.py  context.py  database.py  dependencies.py  exceptions.py  jwt_middleware.py  logging.py  middleware.py  rbac.py  supabase.py  trace_collector.py  tracing.py  tracing_middleware.py
backend/guardrails/: __init__.py  input_guardrails.py  output_guardrails.py  policy.py
backend/migrations/: env.py
backend/migrations/versions/: 20241230_210000_001_initial_schema.py  20241230_220000_002_add_backup_tables.py  (+4 more)
backend/models/: __init__.py  approval.py  artefact.py  audit.py  backup.py  base.py  cli_task.py  engagement.py  knowledge_base.py  metrics.py  orchestration.py  project.py  rbac.py  session.py  trace.py  workflow.py
backend/services/: __init__.py  agent_orchestrator.py  agent_service.py  audit_service.py  backup_service.py  cli_task_service.py  compliance_reporting_service.py  conversation_service.py  crypto_verification_service.py  embedding_service.py  knowledge_base_service.py  metrics_service.py  recovery_service.py  workflow_definition.py
backend/tests/: __init__.py  test_cli_task.py  test_models.py  test_orchestrator_unit.py  test_workflow_api.py  test_workflow_definition.py
backend/tools/: __init__.py  base_tools.py  codex_tools.py  data_access_tools.py  knowledge_base_tools.py
(+180 files in other folders)
